Chapter 16/gke-deploy/ingress/ingress2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: banking-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: banking-ip
    networking.gke.io/managed-certificates: banking-certificate
spec:
  rules:
    - host: www.banking.jasonmarston.me.uk
      http:
        paths:
          - path: /account
            backend:
              serviceName: account-svc
              servicePort: 8080
          - path: /account/*
            backend:
              serviceName: account-svc
              servicePort: 8080
          - path: /user/*
            backend:
              serviceName: user-svc
              servicePort: 8080
          - path:
            backend:
              serviceName: front-end-svc
              servicePort: 80
